# metalsmith

./: .ansible-lint  .gitignore  .gitreview  .stestr.conf  .travis.yml  .zuul.yaml  README.rst  lower-constraints.txt  requirements.txt  roles  setup.cfg  test-requirements.txt  tox.ini
doc/: joined-requirements.txt  requirements.txt
doc/source/: conf.py  index.rst
doc/source/_exts/: ansible-autodoc.py
doc/source/cli/: index.rst
doc/source/user/: ansible.rst
metalsmith/: __init__.py  _cmd.py  _config.py  _exceptions.py  _format.py  _instance.py  _network_metadata.py  _nics.py  _os_api.py  _provisioner.py  _scheduler.py  _utils.py  deploy.py  exceptions.py  instance_config.py  main.py  os_api.py  sources.py  version.py
metalsmith/test/: test_cmd.py  test_config.py  test_deploy.py  test_instance.py  test_instance_config.py  test_main.py  test_metalsmith_instances.py  test_network_metadata.py  test_nics.py  test_os_api.py  test_provisioner.py  test_scheduler.py  test_sources.py  test_utils.py
metalsmith_ansible/ansible_plugins/modules/: metalsmith_deployment_defaults.py  metalsmith_instances.py
metalsmith_ansible/roles/metalsmith_deployment/: README.rst
metalsmith_ansible/roles/metalsmith_deployment/defaults/: main.yml
metalsmith_ansible/roles/metalsmith_deployment/tasks/: main.yml
playbooks/integration/: centos-image.yaml  centos8-image.yaml  centos8-integration.yaml  centos9-image.yaml  centos9-integration.yaml  cirros-image.yaml  exercise.yaml  initial-setup.yaml  library  post.yaml  pre.yaml  run.yaml  ssh-key.yaml
releasenotes/notes/: 0.9-deprecations-f403ce4961b77fe1.yaml  allocation-hostname-f148e8adf0aee89a.yaml  allow-both-network-and-subnet-in-nic-info-af8b40a26d55828e.yaml  api-stein-8e5d165aa6d115cf.yaml  associated-993c26ac5dc0cfc0.yaml  config_drive-f59bb5d8e684b2ef.yaml  deprecations-14-4292eaa456564782.yaml  drop-py-2-7-3cd57c85e8eb8d2d.yaml  exceptions-395ae4f1ad4de6da.yaml  file-checksum-d19370a8fde00a81.yaml  fix-ip-allocation-deferred-causing-broken-network-metadata-9c3ccfab2c563466.yaml  format-hostname-634a412ea933a966.yaml  iinfo-2014b1de4dbeca2d.yaml  initial-5afe4a5f6a13fa8e.yaml  instance-config-c4ea6a169f782138.yaml  keep-instance-info-3e7bb09244d5aaa6.yaml  network-metadata-ff0c3e80e5e0f53c.yaml  no-clean-up-03bfaee6bbb112fb.yaml  openstacksdk-9ad2298b84e34a5f.yaml  port-address-resolution-734ce724a64aacdb.yaml  prettytable-1db78a96c1d921d0.yaml  raw_http_images-41007351896ff642.yaml  remove-py38-49274651f8385f4a.yaml  reserve-hostname-85d02321156bde3b.yaml  resource-class-1957e83fa8235641.yaml  source-detect-673ad8c3e98c3df1.yaml  states-79b593683c0783d5.yaml  stein-deprecation-6a4c9217a6ac4f13.yaml  subnet-1c177e4b40cc607c.yaml  update-references-for-checksums-44206e710b0506fe.yaml  whole-disk-root-gb-bd8ee3600de9ec8d.yaml
releasenotes/source/: conf.py  index.rst  stein.rst  train.rst  ussuri.rst  victoria.rst
roles/metalsmith_deployment/: README.rst
roles/metalsmith_deployment/defaults/: main.yml
roles/metalsmith_deployment/tasks/: main.yml
tools/: ansible-lint.sh
