[metadata]
name = metalsmith
summary = Deployment and Scheduling tool for Bare Metal
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/metalsmith
license = Apache-2
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    metalsmith

data_files =
    share/ansible/roles/metalsmith_deployment = roles/metalsmith_deployment/*

[entry_points]
console_scripts =
    metalsmith = metalsmith._cmd:main
