[metadata]
name = metalsmith
summary = Deployment and Scheduling tool for Bare Metal
description-file = README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/metalsmith
license = Apache-2
python-requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    metalsmith

data_files =
    share/ansible/roles/metalsmith_deployment = roles/metalsmith_deployment/*

[entry_points]
console_scripts =
    metalsmith = metalsmith._cmd:main
