[metadata]
name = metalsmith
summary = Deployment and Scheduling tool for Bare Metal
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/metalsmith
license = Apache-2
python_requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    metalsmith

data_files =
    share/ansible/roles/ = metalsmith_ansible/roles/*
    share/ansible/plugins/ = metalsmith_ansible/ansible_plugins/*

[entry_points]
console_scripts =
    metalsmith = metalsmith._cmd:main

[codespell]
quiet-level = 4
# Words to ignore:
# ignore-words-list = example